KCM desktop Paths: update places when xdg paths change

BUG: 428112